--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,13 @@ spring:
         cache.use_second_level_cache: false
         cache.use_structured_entries: false
         cache.use_minimal_puts: false
+      liquibase:
+        enabled: true #this is optional as enabled by default
+        change-log: classpath:/liquibase-outputChangeLog.xml
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/blog_db?serverTimezone=UTC
     username: root
     password: testtest
+    changeLogFile: src/main/resources/liquibase-outputChangeLog.xml
+
 #    driverClassName: com.mysql.jdbc.Driver
