--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,6 @@
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
-			<version>3.4.1</version>
 		</dependency>
 	</dependencies>
 
@@ -66,26 +65,9 @@
 			<plugin>
 				<groupId>org.liquibase</groupId>
 				<artifactId>liquibase-maven-plugin</artifactId>
-				<version>3.8.1</version>
 				<configuration>
-					<propertyFile>${project.build.outputDirectory}/liquibase-maven-plugin.properties</propertyFile>
-					<systemProperties>
-						<user.name>your_liquibase_username</user.name>
-					</systemProperties>
-					<logging>info</logging>
+					<propertyFile>src/main/resources/liquibase.properties</propertyFile>
 				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.liquibase.ext</groupId>
-						<artifactId>liquibase-hibernate5</artifactId>
-						<version>3.6</version>
-					</dependency>
-					<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-data-jpa</artifactId>
-						<version>2.2.0.RELEASE</version>
-					</dependency>
-				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
