--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
-url=jdbc:mysql://localhost:3306/blog_db
+url=jdbc:mysql://localhost:3306/blog_db?serverTimezone=UTC
 username=root
 password=testtest
 driver=com.mysql.cj.jdbc.Driver
-outputChangeLogFile=src/main/resources/liquibase-outputChangeLog.xml
+outputChangeLogFile=src/main/resources/changelog/liquibase-outputChangeLog.xml
